@@ -1,0 +1,7 @@
+class base
+{
+ public:
+  base (int _x);
+  int x;
+  virtual int meth ();
+};
